cmake_minimum_required(VERSION 3.5)
project(lab7_pkg)

set(CMAKE_CXX_STANDARD 14)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# Dependencies
find_package(ament_cmake REQUIRED)
find_package(ament_cmake_python REQUIRED)

find_package(rclcpp REQUIRED)
find_package(rclpy REQUIRED)

find_package(geometry_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(ackermann_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(std_msgs REQUIRED)
find_package(visualization_msgs REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(Eigen3 REQUIRED)

include_directories(include)

# C++ executable
add_executable(rrt_node
  src/rrt_node.cpp
  src/occupancy_grid.cpp
)

ament_target_dependencies(rrt_node
  rclcpp
  geometry_msgs
  ackermann_msgs
  nav_msgs
  sensor_msgs
  std_msgs
  visualization_msgs
  tf2_ros
  Eigen3
)

install(TARGETS
  rrt_node
  DESTINATION lib/${PROJECT_NAME}
)

# Python
ament_python_install_package(${PROJECT_NAME})

install(PROGRAMS
  scripts/rrt_node.py
  scripts/pure_pursuit_rrt.py
  scripts/debug_node.py
  scripts/waypoint_gen_node.py
  DESTINATION lib/${PROJECT_NAME}
)

ament_package()